# theridion-net

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md
.github/: dependabot.yml
.github/actions/run-tests/: action.yml
.github/actions/run-theridion/: action.yml
.github/workflows/: ci.yml  desktop-release.yml  integration.yml  release-hub.yml  release-runner.yml  release.yml
apps/sidecar/: .dockerignore  Dockerfile  README.md  fly.toml  pyproject.toml  sidecar.spec
apps/sidecar/scripts/: build-bundle.sh  sidecar_entry.py
apps/sidecar/tests/: conftest.py  test_advanced.py  test_agent_explorer.py  test_assertions.py  test_auth.py  test_body_search.py  test_certificates.py  test_chaining.py  test_codegen.py  test_collection_runner.py  test_cookies_api.py  test_cookies_jar.py  test_curl.py  test_doc_generator.py  test_env_diff.py  test_environments.py  test_fuzzer.py  test_golden_files.py  test_grpc.py  test_grpc_reflection.py  test_header_insights.py  test_healing.py  test_interceptor.py  test_load_engine.py  test_loadtest_vars_auth.py  test_mock_record.py  test_multi_env_runner.py  test_network_probe.py  test_oauth2_flow.py  test_perf_budget.py  test_product_ops.py  test_publish_config.py  test_rate_limit_detector.py  test_replay.py  test_request_diff.py  test_run_result_v2.py  test_runner.py  test_schema_validator.py  test_secrets_vault.py  test_security.py  (+8 more)
apps/sidecar/tests/fixtures/: echo.proto  grpc_echo_server.py  test.crt  test.key
apps/sidecar/theridion_sidecar/: __init__.py  assertions.py  cli.py  cookies.py  environments.py  globals.py  healing.py  main.py  mcp_bridge.py  models.py  secrets_vault.py  seed.py  settings.py  soap.py  storage.py  trace_viewer.py  yaml_storage.py
apps/sidecar/theridion_sidecar/api/: _auth.py  advanced.py  agent_explorer.py  ai.py  api_changelog.py  assertions.py  body_search.py  certificates.py  chaining.py  codegen.py  collection_runner.py  collections.py  compression_stats.py  connection_stats.py  content_type_validator.py  contract_drift.py  contract_guard.py  cookies.py  cors_test.py  curl.py  curl_log.py  custom_dashboard.py  data_generator.py  dependency_resolver.py  diagnostics.py  dns_inspect.py  doc_generator.py  environments.py  error_patterns.py  flow_graph.py  fuzzer.py  globals.py  golden_files.py  grpc_api.py  header_insights.py  healing.py  health.py  idempotency_check.py  importer.py  injection_scan.py  (+51 more)
apps/studio/: .vercelignore  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  proxy.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
apps/studio/app/: robots.ts
apps/studio/app/ai.txt/: route.ts
apps/studio/app/llms.txt/: route.ts
apps/studio/app/x-honeypot-internal/: route.ts
apps/studio/lib/security/: arcjet.ts  sentry-tags.ts
apps/studio/src/: App.tsx  index.css  main.tsx
apps/studio/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/studio/src-tauri/capabilities/: default.json
apps/studio/src-tauri/icons/: icon.icns
apps/studio/src-tauri/src/: event_watcher.rs  lib.rs  main.rs  sidecar.rs
apps/studio/src/components/: ActivityBar.tsx  AgentExplorerModal.tsx  BatchRunnerModal.tsx  BodyDiffModal.tsx  ChangelogModal.tsx  CliRunnerPanel.tsx  CodeEditor.tsx  CodegenModal.tsx  CollectionStatsModal.tsx  CollectionVarsModal.tsx  CommandPalette.tsx  ComparisonTableModal.tsx  ContextMenu.tsx  CookieJarPanel.tsx  CurlImportModal.tsx  DependencyGraphModal.tsx  DiffModal.tsx  DocGeneratorModal.tsx  EmptyState.tsx  EnvDiffModal.tsx  EnvDropdown.tsx  EnvManagerModal.tsx  ErrorBoundary.tsx  EventCenter.tsx  EventToast.tsx  ExtractorsPanel.tsx  FlowEditorModal.tsx  GlobalSearch.tsx  GraphQLModal.tsx  GrpcModal.tsx  HistoryPanel.tsx  HubOverviewPanel.tsx  ImportModal.tsx  (+52 more)
docs/: improvements-plan.md  signing.md
memory/: memory.md  soul.md
wiki/: 01-DOMAIN.md  02-ARCHITECTURE.md  03-DECISIONS.md  04-RUNBOOK.md
(+63 files in other folders)
