[project]
name = "theridion-sidecar"
version = "0.0.1"
description = "Theridion Python sidecar — protocol executors and core engine"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Tomáš Mertin", email = "tomas.mertin@gmail.com" },
]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx[http2]>=0.28",
    "pydantic>=2.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["theridion_sidecar"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
