[project]
name = "theridion-sidecar"
version = "0.0.1"
description = "Theridion Python sidecar — protocol executors and core engine"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Tomáš Mertin", email = "tomas.mertin@gmail.com" },
]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx[http2]>=0.28",
    "pydantic>=2.10",
    "zeep[xmlsec]>=4.3.2",
    "aiokafka>=0.14.0",
    "grpcio>=1.80.0",
    "grpcio-reflection>=1.80.0",
    "protobuf>=6.33.6",
    "cryptography>=48.0.0",
    "jsonschema>=4.26.0",
    "pyyaml>=6.0.3",
    "python-multipart>=0.0.28",
    "mcp>=1.27.1",
    "jsonpath-ng>=1.8.0",
    "lxml>=6.1.0",
    "paho-mqtt>=2.1.0",
    "psycopg2-binary>=2.9",
    "stomp-py>=8.1",
    "grpcio-tools>=1.80.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
    "mypy>=1.13",
    "pyinstaller>=6.20.0",
]

[project.scripts]
theridion = "theridion_sidecar.cli:main"
theridion-mcp = "theridion_sidecar.mcp_bridge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["theridion_sidecar"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
